--- a/examples/index.html
+++ b/examples/index.html
@@ -4,7 +4,7 @@
         <title>Routez!</title>
     </head>
     <body>
-        <h1>Page served with Routez for Zig</h1>
+        <h1>Page served with <a href="https://github.com/Vexu/routez">Routez</a> and <a href="https://github.com/ziglang/zig">Zig</a></h1>
         <a href="/about">about</a>
         <a href="/about/more">about more</a>
         <a href="/post/1234">post 1234</a>
