--- a/examples/index.html
+++ b/examples/index.html
@@ -9,5 +9,6 @@
         <a href="/about/more">about more</a>
         <a href="/post/1234">post 1234</a>
         <a href="/static/assets/example-file.txt">example-file.txt</a>
+        <a href="/counter">page load counter</a>
     </body>
 </html>
